Ticket #14724 (closed defect: fixed)

Opened 9 months ago

Last modified 8 months ago

[patch] cleanup not needed variable in src/os2/listbox.cpp

Reported by: ettl.martin Owned by:
Priority: lowest Milestone:
Component: wxOSX (any toolkit) Version: 2.9-svn
Keywords: Cc:
Blocked By: Patch: yes
Blocking:

Description

During a code review, i found a not needed variable initialization in file src/os2/listbox.cpp.

Please review the attached patch, it fixes this issue.

Best regards and many thanks

Martin Ettl

Attachments

cleanup.patch download (382 bytes) - added by ettl.martin 9 months ago.
proposed patch
cleanup001.patch download (1.7 KB) - added by ettl.martin 9 months ago.
proposed patch

Change History

Changed 9 months ago by ettl.martin

proposed patch

  Changed 9 months ago by lanurmi

While cleaning up is good per se (IMHO), do you really need to create a separate ticket and patch for each file you touch? Even if they are all under src/os2, as would seem to be the case lately.

follow-up: ↓ 5   Changed 9 months ago by vadz

  • priority changed from normal to lowest

I agree, could you please collect all your fixes or at least all your fixes to the sources under src/os2 into a single ticket?

Also, I won't presume to tell you how to spend your time, but OS/2 is really dead, I think we'll be removing it from svn soon after 3.0 so I don't know if it's worth to do anything with it at all.

Changed 9 months ago by ettl.martin

proposed patch

  Changed 9 months ago by ettl.martin

Hey guys,

i updated the patch, as requested. If i provide further patches of this kind, i 'll collect them by folder.

Best regards and many thanks

Martin

  Changed 9 months ago by VZ

  • status changed from new to closed
  • resolution set to fixed

(In [72617]) Remove unneeded variable initializations in wxPM code.

Closes #14724.

in reply to: ↑ 2   Changed 8 months ago by neis

Replying to vadz:


Also, I won't presume to tell you how to spend your time, but OS/2 is really dead,

Just for completeness, I should point out that the latest release (eComStation 2.1) is from 2011, so "really dead" might be a bit exaggerated. OTOH, I never found time to get an UTF-8 build of wxWidgets to work - apparently there's something about GUI initialization that I'm missing, so from the wx point of view, "dead" seems a valid description. :-( BTW, a port of QT-4.7 is apparently working nicely on OS/2.

Note: See TracTickets for help on using tickets.