Remove unneeded variable initializations in wxPM code.

Closes #14724.

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/trunk@72617 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775