src/os2/fontutil.cpp
@@ -558,17 +558,12 @@ void wxOS2SelectMatchingFontByName(
     nIndex = 0;
     for(i = 0, nIs = 0; i < nNumFonts; i++)
     {
-        int                         nEmHeight = 0;
-        int                         nXHeight = 0;
-
         anDiff[0] = wxGpiStrcmp((wxChar*)pFM[i].szFacename, zFontFaceName);
         anDiff[1] = abs(pFM[i].lEmHeight - nPointSize);
         anDiff[2] = abs(pFM[i].usWeightClass -  usWeightClass);
         anDiff[3] = abs((pFM[i].fsSelection & 0x2f) -  fsSelection);
         if(anDiff[0] == 0)
         {
-            nEmHeight = (int)pFM[i].lEmHeight;
-            nXHeight  =(int)pFM[i].lXHeight;
             if( (nIs & 0x01) == 0)
             {
                 nIs = 1;
